# simplificare-finance

./: README copy.md  README.md  __init__.py  pyproject.toml  sp500_ranking_changes_20250811.csv  sp500_ranking_changes_20250826.csv  sp500_ranking_changes_20250909.csv  sp500_tracking_data.json
src/discovery/: __init__.py  discoverer.py  tracker.py
