[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplificare-finance"
version = "0.1.3"
description = "A Python toolkit for financial market analysis and tracking, focusing on S&P 500 companies"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Hari Bantwal", email = "hari@simplificare.ch" }
]
keywords = ["finance", "stock market", "S&P 500", "market analysis"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "finvizfinance>=1.1.1",
    "pandas>=2.3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/discovery"]

[project.urls]
Homepage = "https://github.com/pupli/simplificare-finance"
Documentation = "https://github.com/pupli/simplificare-finance#readme"
Repository = "https://github.com/pupli/simplificare-finance.git"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]
